--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -12,21 +12,7 @@
     border-radius: 5px;
   }
 
-  @media (min-width: 488px) {
-    & {
-      grid-template-columns: repeat(2, 200px);
-    }
-  }
-
-  @media (min-width: 768px) {
-    & {
-      grid-template-columns: repeat(3, 200px);
-    }
-  }
-
-  @media (min-width: 1024px) {
-    & {
-      grid-template-columns: repeat(4, 200px);
-    }
-  }
+  @include width(488px, 2);
+  @include width(786px, 3);
+  @include width(1024px, 4);
 }
